--- a/src/scss/shared.scss
+++ b/src/scss/shared.scss
@@ -44,3 +44,8 @@ body {
     margin: 0 auto; /*ставит контейнер по центру*/
     padding: 0 20px;
 }
+.container-form {
+    max-width: 720px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
