--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -31,6 +31,7 @@
         }
         .form__box {
             display: flex;
+            align-items: center;
             gap: 29px;
             @media (max-width: 600px) {
                 display: none;
@@ -374,9 +375,10 @@
                         left: 31%;
                         @media (max-width: 700px) {
                             font-size: 90px;
-                            @media (max-width: 500px) {
-                                font-size: 78px;
-                            }
+                            
+                        }
+                        @media (max-width: 500px) {
+                            font-size: 78px;
                         }
                     }
                 }
